# wandex

./: Cargo.toml  README.md  build.rs
src/: bookmarks.rs  config.rs  config_installer.rs  coordinates.rs  fail.rs  file_browser.rs  files.rs  foldview.rs  fscache.rs  hbox.rs  imgview.rs  keybind.rs  listview.rs  main.rs  mediaview.rs  minibuffer.rs  paths.rs  preview.rs  proclist.rs  quick_actions.rs  stats.rs  tabview.rs  term.rs  textview.rs  trait_ext.rs  widget.rs
