[package]
name = "wandex"
version = "1.3.5"
authors = ["rabite0", "iesahin"]
edition = "2018"
description = "Reincarnation of fast, lag-free terminal file browser hunter"
homepage = "https://github.com/iesahin/wandex"
repository = "https://github.com/iesahin/wandex"
readme = "README.md"
license = "CC0"
keywords = ["cli", "terminal", "file"]
categories = ["command-line-utilities"]
default-run = "wandex"


[dependencies]
termion = "1.5"
unicode-width = "0.1"
lazy_static = "1"
natord = "1.0"
lscolors = { version = "0.8", features = [ "ansi_term" ]  }
tree_magic_fork = "0.2"
rayon = "1.3"
dirs-2 = "3.0"
users = "0.11"
chrono = "0.4"
libc = "0.2.51"
failure = "0.1.5"
failure_derive = "0.1.1"
notify = "4.0.14"
parse-ansi = "0.1.6"
signal-notify = "0.1.3"
systemstat = "0.1.5"
mime_guess = "2.0"
async_value = "0.2.7"
osstrtools = "0.2"
pathbuftools = "0.1"
clap = "2.33"
mime = "0.3.13"
base64 = "0.13"
strum = "0.22"
strum_macros = "0.22"
rust-ini = "0.17"
derivative = "2.2"
itertools = "0.10"
nix = "0.23"
strip-ansi-escapes = "0.1"
crossbeam = "0.8"
parking_lot = "0.11"


image = { version = "0.23", optional = true }
gstreamer = { version = "0.17", optional = true }
gstreamer-app = { version = "0.17", optional = true }
gstreamer-player = { version = "0.17", optional = true }
gstreamer-video = { version = "0.17", optional = true }
gstreamer-base = { version = "0.17", optional = true }
sixel-sys = { version="0.3" , optional = true }

# Need extra section to avoid conflict with features
[dependencies.sixel-rs]
package = "sixel"
version = "0.3"
optional = true

[build-dependencies]
termion = "1.5"
rustc_version = "0.4.0"

[features]
default = []
video = ["gstreamer", "gstreamer-app", "gstreamer-player","gstreamer-video", "gstreamer-base"]
img = ["image"]
sixel = ["sixel-rs", "sixel-sys"]

[[bin]]
name = "wandex"
path = "src/main.rs"

[[bin]]
name = "wandex-media"
path = "src/wandex-media.rs"
required-features = ["img"]

# These options increase performance and generate a smaller binary
[profile.release]
lto = true
codegen-units = 1
